--- a/api/package.json
+++ b/api/package.json
@@ -12,8 +12,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "^1.2.13",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.19",
     "dotenv": "^16.5.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
@@ -25,6 +27,7 @@
     "migration:generate": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:generate ./src/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d ./src/data-source.ts migration:run",
     "build": "rm -rf ./dist && tsc",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "seed": "ts-node src/seeds/seed.ts"
   }
 }
